# ppp_data_tool

./: .gitignore  Backend-Dockerfile  Frontend-Dockerfile  README.md  docker-compose.yaml  package-lock.json
.github/workflows/: deploy.yml
app/: main.py
app/db/: database.py  models.py
app/services/: loader.py  logger.py  processor.py
copilot/: .workspace
copilot/backend/: manifest.yml
copilot/environments/dev/: manifest.yml
copilot/environments/prod/: manifest.yml
copilot/frontend/: manifest.yml
copilot/pipelines/my-pipeline/: buildspec.yml  manifest.yml
ppp-backend/: main.py  pyproject.toml
ppp-backend/api/: routes.py  schemas.py
ppp-backend/db/: database.py
ppp-backend/services/: scraper.py
ppp-frontend/: Frontend-Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
ppp-frontend/src/: App.tsx
ppp-frontend/src/api/: pppApi.ts
ppp-frontend/src/components/: BusinessDetails.tsx  BusinessList.tsx  BusinessSearch.tsx  Layout.tsx  LoadDataButton.tsx
ppp-frontend/src/pages/: Home.tsx  NotFound.tsx
