[project]
name = "ppp-data-tool"
version = "0.1.0"
description = "PPP Loan Data Analysis Tool for Baselayer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "fastapi>=0.115.12",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
